manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: externalsecret-updater-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - eso-updater.cg.cs.akeyless.fans
      secretName: externalsecret-updater-tls
  rules:
    - host: eso-updater.cg.cs.akeyless.fans
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: externalsecret-updater-service
                port:
                  number: 9000
